# gmxflow

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  pyrightconfig.json
docs/how-to/: cgenff-paramchem.md  install-gmxflow-without-uv.md  install-gromacs-cuda.md
docs/reference/: config.md
docs/tutorials/: protein-ligand-complex.md
examples/protein_ligand_complex/: .gitignore  README.md  config.toml
examples/protein_ligand_complex/inputs/: JZ4.mol2  JZ4.str  README.md
examples/smoke_peptide_complex/: README.md  config.toml
src/gmxflow/: __init__.py  analysis.py  cli.py  config.py  executor.py  ligand.py  pipeline.py  plots.py  project.py  report.py  runner.py  small_molecule.py  topology.py  workspace.py
src/gmxflow/preparation/: __init__.py  complex.py  disulfide.py  pdb.py  protonation.py
src/gmxflow/templates/: em.mdp.j2  ions.mdp.j2  md.mdp.j2  npt.mdp.j2  nvt.mdp.j2  report.html.j2  rerun.mdp.j2
tests/: test_analysis.py  test_cli.py  test_config.py  test_executor.py  test_ligand.py  test_pipeline.py  test_plots.py  test_preparation.py  test_project.py  test_report.py  test_small_molecule.py  test_topology.py  test_workspace.py
